--- a/movieapp/Base.lproj/Main.storyboard
+++ b/movieapp/Base.lproj/Main.storyboard
@@ -105,14 +105,18 @@
                                     <constraint firstAttribute="height" constant="155" id="tuu-EG-h6Y"/>
                                 </constraints>
                             </imageView>
-                            <stackView contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="w0K-Vw-OsX">
-                                <rect key="frame" x="364" y="283" width="66" height="16"/>
+                            <stackView contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="w0K-Vw-OsX">
+                                <rect key="frame" x="364" y="283" width="50" height="16"/>
                                 <subviews>
                                     <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="ubw-Z5-SZq">
-                                        <rect key="frame" x="0.0" y="0.0" width="33" height="16"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="16" id="EWR-Q0-TJ4"/>
+                                            <constraint firstAttribute="width" constant="16" id="RUb-0i-j75"/>
+                                        </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6e9-vu-ruj">
-                                        <rect key="frame" x="33" y="0.0" width="33" height="16"/>
+                                        <rect key="frame" x="20" y="0.0" width="30" height="16"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                         <color key="textColor" red="0.97380646250000003" green="0.49391703479999999" blue="0.25194047959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -120,6 +124,10 @@
                                 </subviews>
                                 <viewLayoutGuide key="safeArea" id="t5Y-aU-oZR"/>
                                 <color key="backgroundColor" red="0.25297900883838387" green="0.25297900883838387" blue="0.25297900883838387" alpha="0.37701779801324503" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="57W-Bn-rlt"/>
+                                    <constraint firstItem="6e9-vu-ruj" firstAttribute="top" secondItem="t5Y-aU-oZR" secondAttribute="top" id="xYG-9r-noi"/>
+                                </constraints>
                             </stackView>
                             <view contentMode="left" insetsLayoutMarginsFromSafeArea="NO" id="Vzy-jC-rxg">
                                 <rect key="frame" x="65" y="408" width="93" height="22"/>
