--- a/movieapp/Base.lproj/Main.storyboard
+++ b/movieapp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mVI-kG-tv3">
-    <device id="retina6_9" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
@@ -14,11 +14,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="movieapp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="440" height="956"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="140" estimatedRowHeight="20" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Ohk-39-3DH">
-                                <rect key="frame" x="0.0" y="106" width="440" height="850"/>
+                                <rect key="frame" x="0.0" y="44" width="568" height="310"/>
                                 <color key="backgroundColor" red="0.15634226800000001" green="0.1925894916" blue="0.2355927229" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <sections/>
                                 <connections>
@@ -52,7 +52,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mVI-kG-tv3" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleAspectFit" id="pjm-u6-Db8">
-                        <rect key="frame" x="0.0" y="62" width="440" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.15634226800000001" green="0.1925894916" blue="0.2355927229" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -79,17 +79,17 @@
             <objects>
                 <viewController id="YGE-wp-mcm" customClass="DetailViewController" customModule="movieapp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DFb-fK-Xnp">
-                        <rect key="frame" x="0.0" y="0.0" width="440" height="956"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tvu-7z-ghy">
-                                <rect key="frame" x="0.0" y="106" width="440" height="816"/>
+                                <rect key="frame" x="0.0" y="44" width="568" height="276"/>
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4iv-Kd-jeh">
-                                        <rect key="frame" x="0.0" y="0.0" width="440" height="862"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="568" height="322"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XcV-FE-GEh">
-                                                <rect key="frame" x="0.0" y="0.0" width="440" height="210"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="568" height="210"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="210" id="HiN-Hh-Cy9"/>
                                                 </constraints>
@@ -102,7 +102,7 @@
                                                 </constraints>
                                             </imageView>
                                             <stackView contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="w0K-Vw-OsX">
-                                                <rect key="frame" x="372" y="180" width="53" height="16"/>
+                                                <rect key="frame" x="500" y="180" width="53" height="16"/>
                                                 <subviews>
                                                     <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="ubw-Z5-SZq">
                                                         <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
@@ -125,14 +125,14 @@
                                                 </constraints>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="a" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jKE-TW-B49">
-                                                <rect key="frame" x="146" y="213" width="284" height="23"/>
+                                                <rect key="frame" x="146" y="213" width="412" height="23"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="plO-cI-IiW">
-                                                <rect key="frame" x="21" y="362" width="409" height="401"/>
-                                                <mutableString key="text">Nowadays, Apple realized the problem we solved many years ago (lol_face) and provides Content Layout Guide and Frame Layout Guide as part of the UIScrollView. Therefore you need to go through the following steps:
+                                                <rect key="frame" x="21" y="362" width="537" height="358.5"/>
+                                                <string key="text">Nowadays, Apple realized the problem we solved many years ago (lol_face) and provides Content Layout Guide and Frame Layout Guide as part of the UIScrollView. Therefore you need to go through the following steps:
 
 Same as original response below;
 For this contentView, set top, bottom, left, and right margins to 0 pinning them to the Content Layout Guide of the scroll view;
@@ -148,13 +148,13 @@ Original [Deprecated]
 
 So I just sorted out in this way:
 Inside the UIScrollView add a UIView (we can call that contentView);
-In this contentView, set top, bottom, left and right margins to 0 (of course from the scrollView which is the superView); Set also align center horizontally and vertically;</mutableString>
+In this contentView, set top, bottom, left and right margins to 0 (of course from the scrollView which is the superView); Set also align center horizontally and vertically;</string>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" spacing="-1" translatesAutoresizingMaskIntoConstraints="NO" id="OeN-Zt-kn6">
-                                                <rect key="frame" x="91" y="290" width="258" height="32"/>
+                                                <rect key="frame" x="155" y="290" width="258" height="32"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xcu-TH-3IN">
                                                         <rect key="frame" x="0.0" y="0.0" width="70" height="32"/>
@@ -164,13 +164,13 @@ In this contentView, set top, bottom, left and right margins to 0 (of course fro
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2024" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ULb-2r-eIz">
-                                                                <rect key="frame" x="18" y="9" width="29.666666666666671" height="15"/>
+                                                                <rect key="frame" x="18" y="9" width="30" height="15"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                 <color key="textColor" white="1" alpha="0.76503000827814571" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <view alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nUj-JJ-bN0">
-                                                                <rect key="frame" x="56.666666666666657" y="9" width="2" height="14"/>
+                                                                <rect key="frame" x="57" y="9" width="2" height="14"/>
                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="2" id="j7a-YP-neB"/>
@@ -231,7 +231,7 @@ In this contentView, set top, bottom, left and right margins to 0 (of course fro
                                                         <rect key="frame" x="178" y="0.0" width="80" height="32"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spiderman" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjo-Jb-kOh">
-                                                                <rect key="frame" x="19" y="7.9999999999999991" width="61" height="14.666666666666664"/>
+                                                                <rect key="frame" x="19" y="8" width="61" height="14.5"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="61" id="obz-fH-1tq"/>
                                                                 </constraints>
@@ -319,7 +319,7 @@ In this contentView, set top, bottom, left and right margins to 0 (of course fro
     <resources>
         <image name="calendar" width="512" height="512"/>
         <image name="clock" width="512" height="512"/>
-        <image name="star" width="16.333333969116211" height="16"/>
+        <image name="star" width="16.5" height="16"/>
         <image name="ticket" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
